--- a/.travis2.yml
+++ b/.travis2.yml
@@ -21,4 +21,7 @@ before_install:
 script:
   # Build tess-two
   - cd tess-two
-  - 
+  - ndk-build
+  - android update project --path .
+  - ant release
+  - cd ..
