--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,10 @@ android:
 
 before_install:
   # Get Android NDK
-  - if [ `uname -m` = x86_64]; then wget http://dl.google.com/android/ndk/android-ndk32-r10d-linux-x86_64.tar.bz2 -O ndk.tgz; else wget http://dl.google.com/android/ndk/android-ndk32-r10d-linux-x86.tar.bz2 -O ndk.tgz; fi
-  - tar xvf ndk.tgz
-  - export ANDROID_NDK_HOME=`pwd`/android-ndk-r10d
+  - if [ `uname -m` = x86_64]; then wget http://dl.google.com/android/ndk/android-ndk-r10e-linux-x86_64.bin -O ndk.bin; else wget http://dl.google.com/android/ndk/android-ndk-r10e-linux-x86.bin -O ndk.bin; fi
+  - chmod a+x ndk.bin
+  - ./ndk.bin
+  - export ANDROID_NDK_HOME=`pwd`/android-ndk-r10e
   - export PATH=${PATH}:${ANDROID_NDK_HOME}
 
 script:
